# gemma4-31b-agentcore-sample

./: .gitignore  README.md  index.html  package-lock.json  package.json
agent/: Dockerfile  agent.py  pyproject.toml  requirements.txt
amplify/: backend.ts  parameters.ts
eval/: evaluate.py  questions.json  results.json
scripts/: feedback_export.py  feedback_summary.py  get_cognito_token.py
seed/: documents.json  seed.py
seed/docs/: api-design-standards.txt  api-design-standards.txt.metadata.json  budget-planning.txt  budget-planning.txt.metadata.json  code-review-guidelines.txt  code-review-guidelines.txt.metadata.json  compliance-training.txt  compliance-training.txt.metadata.json  data-classification.txt  data-classification.txt.metadata.json  deploy-procedure.txt  deploy-procedure.txt.metadata.json  disaster-recovery.txt  disaster-recovery.txt.metadata.json  expense-report.txt  expense-report.txt.metadata.json  git-workflow.txt  git-workflow.txt.metadata.json  incident-response.txt  incident-response.txt.metadata.json  info-security-basics.txt  info-security-basics.txt.metadata.json  leave-policy.txt  leave-policy.txt.metadata.json  meeting-guidelines.txt  meeting-guidelines.txt.metadata.json  monitoring-alerting.txt  monitoring-alerting.txt.metadata.json  onboarding-checklist.txt  onboarding-checklist.txt.metadata.json  performance-review.txt  performance-review.txt.metadata.json  procurement-process.txt  procurement-process.txt.metadata.json  remote-work-policy.txt  remote-work-policy.txt.metadata.json  (+4 more)
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+17 files in other folders)
